service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: predict
spec:
  selector:
    app: predict
  ports:
    - name: predict
      protocol: TCP
      port: 8890
